# lago

./: .gitignore  README.md  lago.avprj  meson.build
debian/: changelog  control  copyright
po/: POTFILES.in
src/: grelier.vala  lago.vala  meson.build  rofication_client.vala
